# junkyard-of-shangri-la-old

./: README.md  app.py  bookScraper.py  pyproject.toml  requirements.txt
backend/: README.md  ToDo.md  main.py  pyproject.toml  requirements.in  requirements.txt  todo.txt
backend/api/: myParser.py  mySchemas.py  myScraper.py  myUtils.py  my_parser.py  my_schemas.py  my_scraper.py  my_utils.py
backend/src/: bookScraper.py  helperFunctions.py  main.py  myErrors.py  myParser.py  mySchemas.py  myScraper.py  myUtils.py  schemas.py  utils.py
backend/templates/: results.html
backend/tests/: test_main.py  test_myUtils.py  test_my_utils.py
frontend/: .eslintrc  .prettierignore  .prettierrc  ToDo.md  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  todo.txt  tsconfig.json
frontend/assets/css/: main.css
frontend/components/: Loader.vue  MyAnimations.vue  Overlay.vue
frontend/components/body/: BackToTop.vue  CookieBanner.vue  SkipLinks.vue
frontend/components/effects/: Loader.vue  MyAnimations.vue  MyButton.vue  MyLoader.vue  MyOverlay.vue  Overlay.vue  TouchContainer.vue  effectUtils.ts
frontend/components/footer/: MyFooter.vue
frontend/components/header/: CollapsedNav.vue  MyHeader.vue  MySwitch.vue  SkipLinks.vue
frontend/components/icons/: BIcons.vue  MyLogo.vue
frontend/components/main/: MyMain.vue  MyPagination.vue  ResultWindow.vue  Search.vue  optionsList.ts  (+1 more)
frontend/css/: index.css
frontend/misc/: todo.txt
frontend/pages/: index.vue
misc/: todo.txt
src/: bookScraper.py  main.py
templates/: base.html
(+32 files in other folders)
