[tool.poetry]
name = "junkyard-of-shangri-la"
version = "0.1.0"
description = "gunpla webscraper"
authors = ["cielestrial <32034862+cielestrial@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
fastapi = "^0.103.0"
jinja2 = "^3.1.2"
lxml = "^4.9.3"
python = "^3.11"
selenium = "^4.11.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
