[tool.poetry]
name = "junkyard-of-shangri-la"
version = "0.1.0"
description = "gunpla webscraper"
authors = ["cielestrial <32034862+cielestrial@users.noreply.github.com>"]
repository = "https://github.com/cielestrial/junkyard-of-shangri-la"
readme = "README.md"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
fastapi = "^0.103.0"
jinja2 = "^3.1.2"
lxml = "^4.9.3"
python = "^3.11"
selenium = "^4.12.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
zyte-smartproxy-selenium = "^1.0.10"
setuptools = "^68.1.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
